# shotgrid_orm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  test.yml
doc/: ShotgridORM.key  ShotgridORM.pptx
examples/: README.md  basic_usage.py  create_database.py  example_schema.json  live_connection.py
src/shotgrid_orm/: __init__.py  classes.py  sgtypes.py
src/shotgrid_orm.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_createdb.py  test_createscript.py  test_index.py  test_model.py  test_sgorm.py
